--- a/PetFeeder/app/src/main/res/values/strings.xml
+++ b/PetFeeder/app/src/main/res/values/strings.xml
@@ -89,8 +89,8 @@
     <string name="StrDelete_all_records">Delete All Records</string>
     <string name="finder">Finder</string>
     <string name="feed">Feed</string>
-    <string name="select_date">select date</string>
-    <string name="select_time">select time</string>
+    <string name="select_date">Select Date</string>
+    <string name="select_time">Select Time</string>
     <string name="lvl1">Lvl1</string>
     <string name="lvl2">Lvl2</string>
     <string name="lvl3">Lvl3</string>
